clean up sync temp files when canceling jobs

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "Save",
+    "SyncJobStatusQueued":  "Queued",
+    "SyncJobStatusInProgress":  "In-Progress",
+    "SyncJobStatusCompleted":  "Synced",
+    "SyncJobStatusCompletedWithError":  "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
     "NewCollectionNameExample": "Example: Star Wars Collection",
