--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -19,7 +19,7 @@
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "Are you sure you wish to reset the password?",
     "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
-    "HeaderPinCodeReset":  "Reset Pin Code",
+    "HeaderPinCodeReset": "Reset Pin Code",
     "PasswordSaved": "Password saved.",
     "PasswordMatchError": "Password and password confirmation must match.",
     "OptionRelease": "Official Release",
@@ -48,10 +48,13 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "Save",
-    "SyncJobStatusQueued":  "Queued",
-    "SyncJobStatusInProgress":  "In-Progress",
-    "SyncJobStatusCompleted":  "Synced",
-    "SyncJobStatusCompletedWithError":  "Synced with errors",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
     "NewCollectionNameExample": "Example: Star Wars Collection",
@@ -91,6 +94,7 @@
     "HeaderSelectSubtitles": "Select Subtitles",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default/Forced)",
