--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(fehlgeschlagen)",
     "ButtonHelp": "Hilfe",
     "ButtonSave": "Speichern",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Sammlung",
     "HeaderAddToCollection": "Zur Sammlung hinzuf\u00fcgen",
     "NewCollectionNameExample": "Beispiel: Star Wars Collection",
@@ -87,6 +91,7 @@
     "HeaderSelectSubtitles": "W\u00f6hle Untertitel",
     "ButtonMarkForRemoval": "Zur L\u00f6schung vom Ger\u00e4t markieren",
     "ButtonUnmarkForRemoval": "Markierung zur L\u00f6schung vom Ger\u00e4t aufheben",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Erzwungen)",
     "LabelDefaultForcedStream": "(Standard\/Erzwungen)",
