--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
@@ -14,7 +14,7 @@
     "FileReadError": "Se encontr\u00f3 un error al leer el archivo.",
     "DeleteUser": "Borrar Usuario",
     "DeleteUserConfirmation": "Are you sure you wish to delete this user?",
-    "PasswordResetHeader": "Restablecer contrase\u00f1a",
+    "PasswordResetHeader": "Reset Password",
     "PasswordResetComplete": "La contrase\u00f1a se ha restablecido.",
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "Esta seguro que desea restablecer la contrase\u00f1a?",
@@ -48,6 +48,10 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "Grabar",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "A\u00f1adir a la colecci\u00f3n",
     "NewCollectionNameExample": "Ejemplo: Star Wars Colecci\u00f3n",
@@ -85,8 +89,9 @@
     "LabelFree": "Libre",
     "HeaderSelectAudio": "Seleccionar Audio",
     "HeaderSelectSubtitles": "Seleccionar Subt\u00edtulos",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por defecto\/Forzado)",
