--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(Fallido)",
     "ButtonHelp": "Ayuda",
     "ButtonSave": "Guardar",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Colecci\u00f3n",
     "HeaderAddToCollection": "Agregar a Colecci\u00f3n.",
     "NewCollectionNameExample": "Ejemplo: Colecci\u00f3n Guerra de las Galaxias",
@@ -87,6 +91,7 @@
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
     "ButtonMarkForRemoval": "Marcado para remover del dispositivo",
     "ButtonUnmarkForRemoval": "Desmarcar para remover del dispositivo",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por Defecto\/Forzado)",
