--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(\u00e9chou\u00e9)",
     "ButtonHelp": "Aide",
     "ButtonSave": "Sauvegarder",
+    "SyncJobStatusQueued": "Mis en file d'attente",
+    "SyncJobStatusInProgress": "En cours",
+    "SyncJobStatusCompleted": "Synchronis\u00e9",
+    "SyncJobStatusCompletedWithError": "Synchronis\u00e9, mais des erreurs sont apparues",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Ajouter \u00e0 la collection",
     "NewCollectionNameExample": "Exemple: Collection Star Wars",
@@ -87,6 +91,7 @@
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
     "ButtonMarkForRemoval": "Marquer pour suppression dans le disque",
     "ButtonUnmarkForRemoval": "Lib\u00e9rer la suppression dans le disque",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Par d\u00e9faut)",
     "LabelForcedStream": "(Forc\u00e9)",
     "LabelDefaultForcedStream": "(Par d\u00e9faut\/Forc\u00e9)",
