--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/hr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/hr.json
@@ -14,7 +14,7 @@
     "FileReadError": "Prilikom u\u010ditavanja datoteke desila se gre\u0161ka",
     "DeleteUser": "Izbri\u0161i korisnika",
     "DeleteUserConfirmation": "Da li ste sigurni da \u017eelite izbrisati odabranog korisnika?",
-    "PasswordResetHeader": "Resetiraj lozinku",
+    "PasswordResetHeader": "Reset Password",
     "PasswordResetComplete": "Lozinka je resetirana.",
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "Da li ste sigurni da \u017eelite resetirati lozinku?",
@@ -48,6 +48,10 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "Snimi",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
     "NewCollectionNameExample": "Naprimjer: Star Wars Kolekcija",
@@ -85,8 +89,9 @@
     "LabelFree": "Free",
     "HeaderSelectAudio": "Select Audio",
     "HeaderSelectSubtitles": "Select Subtitles",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
