--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(Feilet)",
     "ButtonHelp": "Help",
     "ButtonSave": "lagre",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Legg Til I Samling",
     "NewCollectionNameExample": "Eksempel: Star Wars Samling",
@@ -85,8 +89,9 @@
     "LabelFree": "Gratis",
     "HeaderSelectAudio": "Velg Lyd",
     "HeaderSelectSubtitles": "Velg Undertekst",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Standard)",
     "LabelForcedStream": "(Tvunget)",
     "LabelDefaultForcedStream": "(Standard\/Tvunget)",
