--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(mislukt)",
     "ButtonHelp": "Hulp",
     "ButtonSave": "Opslaan",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Verzameling",
     "HeaderAddToCollection": "Toevoegen aan verzameling",
     "NewCollectionNameExample": "Voorbeeld: Star Wars Collectie",
@@ -87,6 +91,7 @@
     "HeaderSelectSubtitles": "Selecteer Ondertitels",
     "ButtonMarkForRemoval": "Markeren voor verwijdering uit het apparaat",
     "ButtonUnmarkForRemoval": "Niet markeren voor verwijdering uit het apparaat",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Standaard)",
     "LabelForcedStream": "(Geforceerd)",
     "LabelDefaultForcedStream": "(Standaard \/ Georceerd)",
