--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(falhou)",
     "ButtonHelp": "Ajuda",
     "ButtonSave": "Salvar",
+    "SyncJobStatusQueued": "Enfileirado",
+    "SyncJobStatusInProgress": "Em-Progresso",
+    "SyncJobStatusCompleted": "Sincronizado",
+    "SyncJobStatusCompletedWithError": "Sincronizado com erros",
     "LabelCollection": "Cole\u00e7\u00e3o",
     "HeaderAddToCollection": "Adicionar \u00e0 Cole\u00e7\u00e3o",
     "NewCollectionNameExample": "Exemplo: Cole\u00e7\u00e3o Star Wars",
@@ -85,8 +89,9 @@
     "LabelFree": "Gr\u00e1tis",
     "HeaderSelectAudio": "Selecione \u00c1udio",
     "HeaderSelectSubtitles": "Selecione Legendas",
-    "ButtonMarkForRemoval": "Marcado para remo\u00e7\u00e3o do dispositivo",
-    "ButtonUnmarkForRemoval": "Desmarcado para remo\u00e7\u00e3o do dispositivo",
+    "ButtonMarkForRemoval": "Remover do dispositivo",
+    "ButtonUnmarkForRemoval": "Cancelar remo\u00e7\u00e3o do dispositivo",
+    "LabelSyncQualityHelp": "Use alta qualidade para a qualidade m\u00e1xima suportada pelo dispositivo. M\u00e9dia e Baixa reduzem a taxa permitida.",
     "LabelDefaultStream": "(Padr\u00e3o)",
     "LabelForcedStream": "(For\u00e7ada)",
     "LabelDefaultForcedStream": "(Padr\u00e3o\/For\u00e7ada)",
