--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_PT.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(falhou)",
     "ButtonHelp": "Help",
     "ButtonSave": "Guardar",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
     "NewCollectionNameExample": "Exemplo: Cole\u00e7\u00e3o Guerra das Estrelas",
@@ -85,8 +89,9 @@
     "LabelFree": "Free",
     "HeaderSelectAudio": "Select Audio",
     "HeaderSelectSubtitles": "Select Subtitles",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
