--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(misslyckades)",
     "ButtonHelp": "Hj\u00e4lp",
     "ButtonSave": "Spara",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "L\u00e4gg till samling",
     "NewCollectionNameExample": "Exemple: Star Wars-samling",
@@ -85,8 +89,9 @@
     "LabelFree": "Gratis",
     "HeaderSelectAudio": "V\u00e4lj ljudsp\u00e5r",
     "HeaderSelectSubtitles": "V\u00e4lj undertexter",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(f\u00f6rvalda)",
     "LabelForcedStream": "(tvingade)",
     "LabelDefaultForcedStream": "(f\u00f6rvalda\/tvingade)",
