--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/vi.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/vi.json
@@ -14,7 +14,7 @@
     "FileReadError": "C\u00f3 m\u1ed9t l\u1ed7i x\u1ea3y ra khi \u0111\u1ecdc t\u1ec7p tin n\u00e0y.",
     "DeleteUser": "X\u00f3a ng\u01b0\u1eddi d\u00f9ng",
     "DeleteUserConfirmation": "Are you sure you wish to delete this user?",
-    "PasswordResetHeader": "Reset M\u1eadt kh\u1ea9u",
+    "PasswordResetHeader": "Reset Password",
     "PasswordResetComplete": "M\u1eadt kh\u1ea9u \u0111\u00e3 \u0111\u01b0\u1ee3c reset",
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "B\u1ea1n c\u00f3 ch\u1eafc mu\u1ed1n reset m\u1eadt kh\u1ea9u?",
@@ -48,6 +48,10 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "L\u01b0u",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
     "NewCollectionNameExample": "Example: Star Wars Collection",
@@ -85,8 +89,9 @@
     "LabelFree": "Free",
     "HeaderSelectAudio": "Select Audio",
     "HeaderSelectSubtitles": "Select Subtitles",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
