--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(\u5931\u8d25)",
     "ButtonHelp": "Help",
     "ButtonSave": "\u50a8\u5b58",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "\u5408\u96c6",
     "HeaderAddToCollection": "\u52a0\u5165\u5408\u96c6",
     "NewCollectionNameExample": "\u4f8b\u5982\uff1a\u661f\u7403\u5927\u6218\u5408\u96c6",
@@ -87,6 +91,7 @@
     "HeaderSelectSubtitles": "\u9009\u62e9\u5b57\u5e55",
     "ButtonMarkForRemoval": "\u4ece\u8bbe\u5907\u4e2d\u6807\u8bb0\u5220\u9664",
     "ButtonUnmarkForRemoval": "\u4ece\u8bbe\u5907\u4e2d\u53d6\u6d88\u6807\u8bb0\u5220\u9664",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(\u9ed8\u8ba4)",
     "LabelForcedStream": "(\u5f3a\u5236)",
     "LabelDefaultForcedStream": "(\u9ed8\u8ba4\/\u5f3a\u5236)",
