--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/cs.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/cs.json
@@ -14,7 +14,7 @@
     "FileReadError": "Nastala chyba p\u0159i na\u010d\u00edt\u00e1n\u00ed souboru.",
     "DeleteUser": "Odstranit u\u017eivatele",
     "DeleteUserConfirmation": "Are you sure you wish to delete this user?",
-    "PasswordResetHeader": "Obnovit heslo",
+    "PasswordResetHeader": "Reset Password",
     "PasswordResetComplete": "Heslo bylo obnoveno.",
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "Jste si jisti, \u017ee chcete obnovit heslo?",
@@ -48,6 +48,10 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "Ulo\u017eit",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
     "NewCollectionNameExample": "P\u0159\u00edklad: Kolekce Star Wars",
@@ -85,8 +89,9 @@
     "LabelFree": "Free",
     "HeaderSelectAudio": "Select Audio",
     "HeaderSelectSubtitles": "Select Subtitles",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
