--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/da.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/da.json
@@ -14,7 +14,7 @@
     "FileReadError": "Der opstod en fejl i fors\u00f8get p\u00e5 at l\u00e6se filen",
     "DeleteUser": "Slet bruger",
     "DeleteUserConfirmation": "Er du sikker p\u00e5 du \u00f8nsker at slette denne bruger?",
-    "PasswordResetHeader": "Nulstil kode",
+    "PasswordResetHeader": "Reset Password",
     "PasswordResetComplete": "Koden er blevet nulstillet",
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "Er du sikker p\u00e5 at koden skal nulstilles",
@@ -48,6 +48,10 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "Gem",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
     "NewCollectionNameExample": "Example: Star Wars Collection",
@@ -85,8 +89,9 @@
     "LabelFree": "Free",
     "HeaderSelectAudio": "Select Audio",
     "HeaderSelectSubtitles": "Select Subtitles",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
