--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/uk.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/uk.json
@@ -48,6 +48,10 @@
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
     "ButtonSave": "\u0417\u0431\u0435\u0440\u0456\u0433\u0442\u0438",
+    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "\u0414\u043e\u0434\u0430\u0442\u0438 \u0434\u043e \u043a\u043e\u043b\u0435\u043a\u0446\u0456\u0457",
     "NewCollectionNameExample": "Example: Star Wars Collection",
@@ -85,8 +89,9 @@
     "LabelFree": "Free",
     "HeaderSelectAudio": "Select Audio",
     "HeaderSelectSubtitles": "Select Subtitles",
-    "ButtonMarkForRemoval": "Mark for removal from device",
-    "ButtonUnmarkForRemoval": "Unmark for removal from device",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
