--- a/MediaBrowser.Server.Implementations/Localization/Server/hr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/hr.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Omogu\u0107i preuzimanje slika iz videa",
     "VideoImageExtractionHelp": "Za videa koja jo\u0161 nemaju slike, i za koja nismo uspijeli na\u0107i slike na internetu ovo \u0107e dodati jo\u0161 malo vremena na po\u010detno skeniranje biblioteke ali \u0107e biti ugodnija prezentacija naslova.",
     "LabelEnableChapterImageExtractionForMovies": "Izvuci slike poglavlja za Filmove",
-    "LabelChapterImageExtractionForMoviesHelp": "Izvla\u010denje slika poglavlja \u0107e omogu\u0107iti korisnicima meni za odabir poglavlja sa grafi\u010dkim prikazom scena. Proces mo\u017ee biti spor, zahtjevan za procesor i za dodatnih par gigabajta mjesta na disku. Pokre\u0107e se kao no\u0107ni zadatak u 4 sata ujutro. Iako se postavke mogu podesiti u zakazanim zadacima, nije ga preporu\u010dljivo pokrenuti u vrijeme kada su korisnici spojeni na server.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Omogu\u0107i automatsko mapiranje porta",
     "LabelEnableAutomaticPortMappingHelp": "UPnP omogu\u0107uje automatsku konfiguraciju usmjeriva\u010da (router \/ modem) za lak\u0161i pristup na daljinu. Ovo mo\u017eda ne\u0107e raditi sa nekim modelima usmjeriva\u010da.",
     "HeaderTermsOfService": "Media Browser Terms of Service",
