--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -94,7 +94,7 @@
     "HeaderSelectSubtitles": "Select Subtitles",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default/Forced)",
@@ -216,6 +216,8 @@
     "MessageConfirmRestart": "Are you sure you wish to restart Media Browser Server?",
     "MessageConfirmShutdown": "Are you sure you wish to shutdown Media Browser Server?",
     "ButtonUpdateNow": "Update Now",
+    "ValueItemCount":  "{0} item",
+    "ValueItemCountPlural":  "{0} items",
     "NewVersionOfSomethingAvailable": "A new version of {0} is available!",
     "VersionXIsAvailableForDownload": "Version {0} is now available for download.",
     "LabelVersionNumber": "Version {0}",
