--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -53,6 +53,7 @@
     "SyncJobStatusFailed": "Failed",
     "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
@@ -216,8 +217,8 @@
     "MessageConfirmRestart": "Are you sure you wish to restart Media Browser Server?",
     "MessageConfirmShutdown": "Are you sure you wish to shutdown Media Browser Server?",
     "ButtonUpdateNow": "Update Now",
-    "ValueItemCount":  "{0} item",
-    "ValueItemCountPlural":  "{0} items",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "A new version of {0} is available!",
     "VersionXIsAvailableForDownload": "Version {0} is now available for download.",
     "LabelVersionNumber": "Version {0}",
